--- a/manifest.plist
+++ b/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://gitee.com/-/ide/project/yst_xiaoyi/OSDownLoad/edit/master/-/OusiCanteen.ipa</string>
+					<string>https://github.com/YST521/downOS/blob/master/OusiCanteen.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://gitee.com/-/ide/project/yst_xiaoyi/OSDownLoad/edit/master/-/icon57.png</string>
+					<string>https://github.com/YST521/downOS/blob/master/icon57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://gitee.com/-/ide/project/yst_xiaoyi/OSDownLoad/edit/master/-/icon512.png</string>
+					<string>https://github.com/YST521/downOS/blob/master/icon512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
