--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/YST521/downOS/master/OusiCanteen.ipa</string>
+					<string>https://github.com/YST521/downOS/blob/master/OusiCanteen.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
